corpus/expressions.txt
==================
Nested Filters
==================

{{ entityName | camelCase | pluralize }}

---

(source_file
  (output
    expression: (pipe_expression
      (or_expression
        (and_expression
          (not_expression
            (comparison_expression
              (range_expression
                (additive_expression
                  (multiplicative_expression
                    (unary_expression
                      (primary_expression
                        (identifier))))))))))
      (filter_chain
        name: (identifier))
      (filter_chain
        name: (identifier))))
  (text))

==================
Logical Condition
==================

{% if field.type == 'string' and not field.optional %}
{% endif %}

---

(source_file
  (if_block
    condition: (if_tag
      condition: (pipe_expression
        (or_expression
          (and_expression
            (not_expression
              (comparison_expression
                (range_expression
                  (additive_expression
                    (multiplicative_expression
                      (unary_expression
                        (primary_expression
                          (member_expression
                            (identifier)
                            (identifier)))))))
                (range_expression
                  (additive_expression
                    (multiplicative_expression
                      (unary_expression
                        (primary_expression
                          (string))))))))
            (not_expression
              (not_expression
                (comparison_expression
                  (range_expression
                    (additive_expression
                      (multiplicative_expression
                        (unary_expression
                          (primary_expression
                            (member_expression
                              (identifier)
                              (identifier))))))))))))))
    end: (endif_tag))
  (text))

==================
Collection Literals
==================

{{ [1, 2, total] }}
{{ {"title": page.title, slug: page["slug"]} }}

---

(source_file
  (output
    expression: (pipe_expression
      (or_expression
        (and_expression
          (not_expression
            (comparison_expression
              (range_expression
                (additive_expression
                  (multiplicative_expression
                    (unary_expression
                      (primary_expression
                        (list_literal
                          (pipe_expression
                            (or_expression
                              (and_expression
                                (not_expression
                                  (comparison_expression
                                    (range_expression
                                      (additive_expression
                                        (multiplicative_expression
                                          (unary_expression
                                            (primary_expression
                                              (number)))))))))))
                          (pipe_expression
                            (or_expression
                              (and_expression
                                (not_expression
                                  (comparison_expression
                                    (range_expression
                                      (additive_expression
                                        (multiplicative_expression
                                          (unary_expression
                                            (primary_expression
                                              (number)))))))))))
                          (pipe_expression
                            (or_expression
                              (and_expression
                                (not_expression
                                  (comparison_expression
                                    (range_expression
                                      (additive_expression
                                        (multiplicative_expression
                                          (unary_expression
                                            (primary_expression
                                              (identifier)))))))))))))))))))))))
  (output
    expression: (pipe_expression
      (or_expression
        (and_expression
          (not_expression
            (comparison_expression
              (range_expression
                (additive_expression
                  (multiplicative_expression
                    (unary_expression
                      (primary_expression
                        (dict_literal
                          (dict_entry
                            key: (string)
                            value: (pipe_expression
                              (or_expression
                                (and_expression
                                  (not_expression
                                    (comparison_expression
                                      (range_expression
                                        (additive_expression
                                          (multiplicative_expression
                                            (unary_expression
                                              (primary_expression
                                                (member_expression
                                                  (identifier)
                                                  (identifier)))))))))))))
                          (dict_entry
                            key: (identifier)
                            value: (pipe_expression
                              (or_expression
                                (and_expression
                                  (not_expression
                                    (comparison_expression
                                      (range_expression
                                        (additive_expression
                                          (multiplicative_expression
                                            (unary_expression
                                              (primary_expression
                                                (subscript_expression
                                                  collection: (identifier)
                                                  index: (pipe_expression
                                                    (or_expression
                                                      (and_expression
                                                        (not_expression
                                                          (comparison_expression
                                                            (range_expression
                                                              (additive_expression
                                                                (multiplicative_expression
                                                                  (unary_expression
                                                                    (primary_expression
                                                                      (string)))))))))))))))))))))))))))))))))))
  (text))

==================
Ranges and Calls
==================

{{ 0..items.count }}
{{ format_date(now(), style="short") }}

---

(source_file
  (output
    expression: (pipe_expression
      (or_expression
        (and_expression
          (not_expression
            (comparison_expression
              (range_expression
                (additive_expression
                  (multiplicative_expression
                    (unary_expression
                      (primary_expression
                        (number)))))
                (additive_expression
                  (multiplicative_expression
                    (unary_expression
                      (primary_expression
                        (member_expression
                          (identifier)
                          (identifier)))))))))))))
  (output
    expression: (pipe_expression
      (or_expression
        (and_expression
          (not_expression
            (comparison_expression
              (range_expression
                (additive_expression
                  (multiplicative_expression
                    (unary_expression
                      (primary_expression
                        (call_expression
                          function: (identifier)
                          arguments: (call_arguments
                            (argument
                              value: (or_expression
                                (and_expression
                                  (not_expression
                                    (comparison_expression
                                      (range_expression
                                        (additive_expression
                                          (multiplicative_expression
                                            (unary_expression
                                              (primary_expression
                                                (call_expression
                                                  function: (identifier)
                                                  arguments: (call_arguments))))))))))))
                            (argument
                              name: (identifier)
                              value: (or_expression
                                (and_expression
                                  (not_expression
                                    (comparison_expression
                                      (range_expression
                                        (additive_expression
                                          (multiplicative_expression
                                            (unary_expression
                                              (primary_expression
                                                (string))))))))))))))))))))))))
  (text))

==================
String Escape Sequences
==================

{{ "hello \"world\"" }}
{{ 'it\'s fine' }}
{{ "line1\nline2\ttabbed\\end" }}

---

(source_file
  (output
    expression: (pipe_expression
      (or_expression
        (and_expression
          (not_expression
            (comparison_expression
              (range_expression
                (additive_expression
                  (multiplicative_expression
                    (unary_expression
                      (primary_expression
                        (string
                          (escape_sequence)
                          (escape_sequence))))))))))))
  (output
    expression: (pipe_expression
      (or_expression
        (and_expression
          (not_expression
            (comparison_expression
              (range_expression
                (additive_expression
                  (multiplicative_expression
                    (unary_expression
                      (primary_expression
                        (string
                          (escape_sequence))))))))))))))
  (output
    expression: (pipe_expression
      (or_expression
        (and_expression
          (not_expression
            (comparison_expression
              (range_expression
                (additive_expression
                  (multiplicative_expression
                    (unary_expression
                      (primary_expression
                        (string
                          (escape_sequence)
                          (escape_sequence)
                          (escape_sequence))))))))))))
  (text))
